--- a/src/app/short-url/short-url.component.html
+++ b/src/app/short-url/short-url.component.html
@@ -25,5 +25,26 @@
 		  	<li class="list-group-item">Shorted Url: {{ result }}</li>
 		  	<li class="list-group-item">Warning: {{ warning }}</li>
 		</ul>
-	</div>  
+	</div> 
+	<br /><br />
+	<form class="form-horizontal">
+	    <div class="form-group">
+	    	<label class="control-label col-sm-2" for="short-url">Enter your short url: </label>
+		    <div class="col-sm-10">
+		      <input type="short-url" class="form-control" name="shorturl" [(ngModel)]="shorturl" (keyup.enter)="getOriginal()">
+		    </div>
+	    </div>
+	    <div class="form-group"> 
+		    <div class="col-sm-offset-2 col-sm-10">
+		      <button type="button" (click)="getOriginal()" class="btn btn-default">Submit</button>
+		    </div>
+		</div>
+  	</form> 
+  	<br /><br />
+  	<div class="container">
+		<ul class="list-group">
+		  	<li class="list-group-item">Original Url: {{ longurl }}</li>
+		  	<li class="list-group-item">Warning: {{ warningInflate }}</li>
+		</ul>
+	</div> 
 </div>
